[package]
name = "adc-lang"
version = "0.1.0"
edition = "2021"
description = "Array-oriented reimagining of dc, a terse stack-based esolang"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malachite = "0.4.16"
bit-vec = "0.8.0"
unchecked-index = "0.2.2"
regex = "1.11.1"
lazy_static = "1.5.0"

[profile.release]
lto = "fat"
incremental = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "adc"
path = "src/main.rs"