[package]
name = "adc-lang"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/43615/adc-lang"
description = "Array-oriented reimagining of dc, a terse stack-based esolang"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malachite = { version = "=0.7.0", features = ["32_bit_limbs", "random"] }
bitvec = "=1.0.1"
unchecked-index = "=0.2.2"
regex = "=1.11.3"
lazy_static = "=1.5.0"
phf = { version = "=0.13.1", features = ["macros"]}
rustyline = "=17.0.2"

[profile.release]
lto = "fat"
incremental = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bin]]
name = "adc"
path = "src/main.rs"
