[package]
name = "adc-lang"
version = "0.2.9"
edition = "2024"
repository = "https://github.com/43615/adc-lang"
description = "Array-oriented reimagining of dc, a terse RPN esolang"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no_os = []

[dependencies]
malachite = { version = "=0.9.1", features = ["32_bit_limbs", "random"] }
bitvec = "=1.0.1"
getrandom = { version = "=0.4.1", features = ["std"] }
const_format = "=0.2.35"
regex = "=1.12.3"
lazy_static = "=1.5.0"
phf = { version = "=0.13.1", features = ["macros"]}
linefeed = "=0.6.0"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1


[[bin]]
name = "adc"
path = "src/main.rs"
